...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="V8R-lb-Awn"/>
                    <connections>
                        <outlet property="defaultLoginButton" destination="qMR-9u-v57" id="i5J-eb-vy7"/>
                        <outlet property="errorLabel" destination="FbE-ea-abK" id="ubR-xJ-bmo"/>
                        <outlet property="idTextField" destination="qep-gb-coA" id="wpn-V1-tmV"/>
                        <outlet property="lineView" destination="UUt-tM-wJl" id="RjF-Yd-2pn"/>
                        <outlet property="passwordTextField" destination="VaT-l8-H6d" id="lfD-D4-n4d"/>
                        <outlet property="transSignUpButton" destination="Olk-A5-b0P" id="O6p-7G-xWu"/>
                        <segue destination="ypd-Mr-Nsn" kind="show" identifier="goSignUp" id="1i2-cN-cke"/>
                        <segue destination="QBX-42-9ku" kind="show" identifier="goCollection" id="zaf-qa-ab4"/>
                        <segue destination="mYC-1l-hpz" kind="show" identifier="LineToRss" id="9Sk-a3-jv2"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="width" constant="400" id="VhH-y7-rHa"/>
                                    <constraint firstAttribute="height" constant="175" id="u9p-lg-inT"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SignUp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b5U-k5-1om">
                                <rect key="frame" x="57" y="160.5" width="300" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="O62-1d-Kgo"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <nil key="textColor"/>
...
                            <constraint firstItem="aI0-jC-DLb" firstAttribute="centerX" secondItem="d7w-Lg-WkP" secondAttribute="centerX" id="r2w-I0-mHk"/>
                            <constraint firstItem="evE-je-UX9" firstAttribute="top" secondItem="aI0-jC-DLb" secondAttribute="bottom" constant="50" id="vzL-6J-kyH"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="CyR-BA-TvI"/>
                    <connections>
                        <outlet property="SignUpButton" destination="evE-je-UX9" id="ud1-ma-HI8"/>
                        <outlet property="errorLabel" destination="S2S-tL-vkR" id="s0e-uE-yBd"/>
                        <outlet property="idTextField" destination="gbt-JQ-M3X" id="MtM-d6-RAI"/>
                        <outlet property="passwordTextField" destination="sry-s8-OuS" id="Kov-uJ-yKF"/>
                        <segue destination="mYC-1l-hpz" kind="show" identifier="goRss" id="k6f-80-MwC"/>
                    </connections>
                </viewController>
...
